stop zooming and scrolling on mobile

--- a/src/sass/partials/_cover.scss
+++ b/src/sass/partials/_cover.scss
@@ -22,7 +22,7 @@
     box-sizing: border-box;
     height: 100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-direction: column;
     opacity: 0;
     transition: opacity 0.3s linear;
